fixes  alignment of footer in tablet and desktop

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -31,12 +31,9 @@
     grid-template-rows: 1fr 1fr;
     height: 35em;
   }
-  /* .main-page-content > div {
-    margin: 8.5%;
-  } */
+  
   .main-page-content2 {
     padding: 0%;
-    /* margin: 8.5%; */
     height: 18em;
   }
   .main-page-content2-head {
@@ -50,7 +47,6 @@
     font-size: 1em;
     font-weight: 200;
     text-align: left;
-    /* margin: 5% 8.5% 5% 8.5%; */
   }
   .main-page-content2-top {
     position: absolute;
@@ -157,36 +153,28 @@
   .climate-change-lower {
     margin: 0%;
   }
-  .stories {
-    grid-template-rows: 1fr 1fr 1fr;
-    position: relative;
-    grid-gap: 0%;
-  }
   .stories-head {
-    top: -8%;
-    left: 15%;
-    z-index: 1;
+    height: 30em;
+    width: 80%;
   }
-  .stories-img {
-    width: 90%;
-    position: relative;
-    grid-area: 1/1/1/1;
+  .stories-head-top {
+    left: 5%;
+    top: -5%;
   }
   .stories-content {
-    position: absolute;
-    bottom: 2%;
-    left: 5%;
-    grid-area: 2/1/2/1;
+    width: 65%;
+    position: relative;
+    left: 15%;
+    top: -8em;
+   
   }
-  .stories-btn-div {
-    margin: 2%;
-    grid-area: 3/1/3/1;
-    justify-self: start;
+  .stories-btn{
+    left:15%;
+    top:-8em;
+    width: 30%;
+    padding: 3%;
   }
-  .stories-btn {
-    padding: 8% 17% 8% 17%;
-    width: 8em;
-  }
+  
   .things-to-do {
     display: block;
     position: relative;
@@ -249,6 +237,13 @@
     grid-area: 1/1/2/3;
     font-size: 1.5em;
     font-weight: bold;
+  }
+  .foot{
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .title>h1{
+    margin-block-start: 0em;
+    margin-block-end: 0em;
   }
 }
 @media (min-width: 900px) {
@@ -341,12 +336,11 @@
   .what-we-do-heading-content {
     font-size: 2.5em;
     text-align: left;
-    /* padding-top: 1em; */
   }
 
   .what-we-do-div {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
   .what-we-do-div-content {
     display: grid;
@@ -404,41 +398,42 @@
   .climate-change-lower-content {
     height: 10em;
   }
+  
   .stories {
-    /* grid-template-rows: 1fr; */
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 0%;
-    /* height: 40em;; */
+    flex-direction: row;
   }
-  .stories-head {
-    top: -15%;
-    left: 50%;
-    z-index: 1;
-    padding: 1% 5% 1% 5%;
-  }
-  .stories-img {
-    width: 70%;
-    /* grid-area: 1/1/1/1; */
+  .stories-head{
+    order: 2;
+    height: 40em;
+    width: 80%;
   }
   .stories-head-top {
-    grid-area: 1/2/1/2;
+    font-size: 1.5em;
+    left: 5%;
+    top: -5%;
+    padding: 3% 5%;
   }
+.stories-content-block{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 50%;
+}
   .stories-content {
-    /* width: 50%; */
-    position: absolute;
-    bottom: 20%;
-    left: -10%;
-    font-size: 1.2em;
-    grid-area: 2/1/2/1;
-  }
-  .stories-btn {
-    position: absolute;
-    bottom: 5%;
-    grid-area: 3/1/3/1;
-    padding: 1% 1% 1% 1%;
-    
+    width: 112%;
+    position: relative;
+    top: 25%;
+    left: 30%;
+    height: 15em;
   }
 
+  .stories-btn {
+    padding: 2.5%;
+    position: relative;
+    left: -70%;
+    top: 10em;
+    width: 30%;
+  }
   .subscribe {
     grid-template-columns: 50fr 30fr 20fr;
     grid-row-gap: 0%;
