--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,57 +325,54 @@
 }
 
 .stories {
-  margin: 8.5%;
-  display: grid;
-  grid-template-rows: 4fr 4fr 1fr;
-  grid-gap: 4%;
-  position: relative;
-  height: 45em;
+  display: flex;
+  flex-direction: column;
+  padding: 8.5%;
 }
-
 .stories-head {
-  background-color: #354463;
-  color: #ffffff;
-  text-align: center;
-  padding: 2% 10% 2% 10%;
-  position: absolute;
-  top: -5%;
-  left: 25%;
-  margin-top: 5%;
-  font-size: 1.2em;
+  position: relative;
+  height: 20em;
+  background-image: url(../home/lady-baby.png);
+  background-size: cover;
 }
-
-.stories-img {
-  width: 100%;
+.stories-head-top {
+  font-size: 1em;
+  position: absolute;
+  left: 25%;
+  top: -5%;
+  background-color: #354463;
+  color: white;
+  width: 7em;
+  padding: 3% 10%;
+  text-align: center;
 }
 
 .stories-content {
-  background-color: #354463;
+  padding: 8.5%;
   text-align: center;
+  font-family: sans-serif;
+  background-color: #354463;
   color: white;
-
-  padding: 5%;
-  font-weight: bold;
-  display: flex;
-  flex-direction: column;
+  margin: 10% 0% 5% 0%;
 }
 .stories-content > p {
-  font-size: 1.3em;
+  font-size: 1.4em;
+  font-weight: bold;
 }
 .stories-content > h5 {
-  font-size: 0.9em;
+  font-size: 1em;
+  font-weight: 300;
 }
 .stories-btn {
   background-color: #c1f7d5;
-  border: none;
-  color: #354463;
   text-align: center;
-  font-size: 1.1em;
+  font-size: 1em;
   cursor: pointer;
-  position: relative;
-  left: 20%;
+  padding: 5%;
   border-radius: 3em;
-  padding: 5% 20% 5% 20%;
+  width: 50%;
+  position: relative;
+  left: 25%;
 }
 
 /* .things-to-do { */
@@ -466,20 +463,18 @@
   max-width: 100%;
   width: 100%;
 }
-.events-content{
-  
-}
+
 .subscribe {
   background-color: #c1f7d5;
   display: grid;
-  padding: 10% 8% 20% 8%;
-  grid-row-gap: 20%;
+  padding: 8.5%;
+  /* grid-row-gap: 20%; */
   grid-column-gap: 5%;
 }
 
 .subscribe > p {
   grid-area: 1/1/2/3;
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-weight: bold;
 }
 
@@ -501,10 +496,10 @@
 }
 
 .foot {
-  padding: 5%;
+  padding: 8.5%;
   display: grid;
-  grid-row-gap: 0%;
-  grid-column-gap: 15%;
+  grid-gap: 5%;
+  grid-template-columns: 1fr 1fr;
 }
 
 .title > h1 {
